qa: fallback to default value on unknown InternationalString implementation during model mapping